# oracle-glot

./: README.md  pyproject.toml  scratch.ipynb  setup.py
oracle_glot/: convert.py
sql/: constant_in_join.sql  join_predicate_is_null.sql  non_join_in_where.sql  old_join.sql  simple_select.sql  subquery.sql
tests/: test_convert.py
